--- a/style/override.css
+++ b/style/override.css
@@ -1,4 +1,21 @@
 .container {
   width: 100%;
   margin: 0;
+  padding: 0;
+}
+.header-container {
+  width: 100%;
+  margin: 0;
+  padding: 1rem;
+  height: 11rem;
+
+}
+.footer-container {
+  width: 100%;
+  margin: 0;
+  padding: 1rem;
+}
+.gallery-container {
+  width: 100%;
+  margin: 0;
 }
