--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,9 @@
-.app {
-  width: 100%
-}
 .gallery-container {
-  padding-top: 5em;
+  padding-left: 3rem;
   border-top: 1 solid black;
+}
+.image-container {
+  float: left;
 }
 .image-container > img {
   width: 300px;
@@ -17,7 +17,6 @@
   background-size: contain;
 }
 .header-container {
-  padding-top: 1rem;
 }
 .header-container > ul, li {
   position: relative;
@@ -28,14 +27,17 @@
   float: right;
 }
 .footer-container {
-  background-color: #2a142d;
+  background-color: #1a1a1a;
   text-align: center;
   position: fixed;
   bottom: 0;
-  padding: 1rem;
+  padding: 3rem;
 }
 .footer-container > ul, li {
   float: none;
   display: inline;
   margin: 0;
+}
+.links-footer {
+  color: #5e5e5e;
 }
