--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,8 @@
 .gallery-container {
-  padding-left: 3rem;
   border-top: 1 solid black;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .image-container {
   float: left;
@@ -16,7 +18,13 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
+.gallery-container > h4 {
+  flex: 1 0 100%;
+  padding: 1rem;
+}
 .header-container {
+  background-color: #1a1a1a;
+  border-bottom: 17px solid #decb4f;
 }
 .header-container > ul, li {
   position: relative;
@@ -29,9 +37,7 @@
 .footer-container {
   background-color: #1a1a1a;
   text-align: center;
-  position: fixed;
-  bottom: 0;
-  padding: 3rem;
+  height: 10rem;
 }
 .footer-container > ul, li {
   float: none;
