--- a/public/style/style.css
+++ b/public/style/style.css
@@ -15,7 +15,7 @@
   padding: 1rem;
 }
 .header-container {
-  background-color: ##05101c;
+  background-color: #05101c;
   border-bottom: 17px solid ##b9b9b9;
 }
 .header-container > ul, li {
