--- a/public/style/style.css
+++ b/public/style/style.css
@@ -24,7 +24,7 @@
 }
 .slogan > h2 {
   font-family: betty;
-  color: rgba(227, 208, 156, 0.7);
+  color: rgba(126, 225, 229, 0.44);
   letter-spacing: 1rem;
 }
 .logo > h1 {
@@ -73,5 +73,9 @@
   margin: 0;
 }
 .links-footer {
+  text-transform: uppercase;
+  font-family: simple;
   color: #d3d3d3;
+  letter-spacing: 3px;
+  font-size: 17px;
 }
